2006-10-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile: Do not set GNUSTEP_INSTALLATION_DIR.
	* Source/GNUmakefile: Same change.
	* Examples/Gui/FirstApp/GNUmakefile: Same change.
	* Examples/Gui/CurrencyConverter/GNUmakefile: Same change.
	
2006-09-08  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/GNUmakefile.postamble (after-install): Updating by
	removing special case for debug=yes; newer gnustep-make does not
	add '_d' to libraries built with debugging enabled.

2005-04-16  Larry Coleman <larryliberty@yahoo.com>

	* Testing/Base/run-test, Testing/Gui/run-test: Updated include paths
	in ruby invocations (make check wasn't working unless installed 
	first).

2005-03-26  Larry Coleman <larryliberty@yahoo.com>

	* Source/ObjcRuntimeUtilities.m: changed declaration of 
	__objc_exec_class.

2005-02-21  Larry Coleman <larryliberty@yahoo.com>

	* ChangeLog, NEWS, GNUmakefile, Source/GNUmakefile: Updated 
	version number in preparation for release.

	* TODO: updated action item regarding Ruby methods that accept
	variable number of arguments.

2004-10-07  Larry Coleman <larry@studio1620.com>

	* Source/RIGSProxySetup.m: Set number of arguments for method 
	being registered to absolute value if negative (skipping method 
	was causing a segfault).

2003-07-31  David Ayers  <d.ayers@inode.at>

	* Source/RIGSCore.m: Remove reference to private header.

2003-05-29  Tobias <ibotty@web.de>

	* Source/RIGSCore.m (class_getNextMethodList): Rename from
	class_nextMethodList (old name causes a syntax error?).

2003-05-26  Adam Fedor  <fedor@gnu.org>

	* Examples/Gui/CurrencyConverter/CurrencyConverter.rb
	Examples/Gui/FirstApp/FirstApp.rb: Change method of starting
	ruby (patch from Tobias <ibotty@web.de>).

2002-02-12  Adam Fedor  <fedor@gnu.org>

	* Source/GNUmakefile(LIBRARIES_DEPEND_UPON): Remove -lgmodel and
	-lpthread.

2001-10-12 14:10  ljulliar

	* GNUmakefile, Source/GNUmakefile: Version 0.2.1

2001-10-08 12:05  ljulliar
